@@ -1,5 +1,6 @@
 # Generated by roxygen2: do not edit by hand
 
+S3method(as.list,R6)
 S3method(format,R6)
 S3method(format,R6ClassGenerator)
 S3method(plot,R6)
